# axum-react-test

./: Cargo.toml
client/: package-lock.json  package.json
client/src/: App.tsx  index.css  main.tsx
src/: main.rs
